Integrated introduction and updated colors through lab01.

--- a/index.html
+++ b/index.html
@@ -66,42 +66,33 @@
                     <div style="width: 1056px; height: 300px; color: white;">
                         <ol>
                             <li>Introduction to workshop</li>
-                            <li>Destinasia travel services</li>
+                            <li>Install OpenShift Container Platform in minutes</li>
+                            <li>Install containerized JBoss BRMS and Destinasia travel discount rules project</li>
+                            <li>Ansible automated deployment of containerized travel and integration services</li>
+                            <li>Testing solution</li>
                         </ol>
                     </div>
                 </section>
 
                 <section data-background="images/rh-images/rh-bg-start.png" data-background-size="cover" data-background-position="bottom">
-                    <div style="width: 100%; height: 200px; color: white">
-                        <h1 style="color: white">Part I</h1>
-                    </div>
-                    <div style="width: 100%; height: 150px; color: white">
-                        <h2 style="color: white">Workshop introduction</h2>
-                    </div>
-                    <div style="width: 100%; height: 300px;">
-                        <h3><a href="introduction.html" target="_blank" style="color: red">Overview AppDev Cloud Workshop</a></h3>
-                    </div>
-                </section>
-
-
-                <section data-background="images/rh-images/rh-bg-start.png" data-background-size="cover" data-background-position="bottom">
-                    <div style="width: 100%; height: 150px; color: white">
-                        <h1 style="color: white">Part II</h1>
+                    <div style="width: 1056px; height: 150px; color: white">
+                        <h1 style="color: white">Workshop</h1>
                     </div>
                     <div style="width: 1056px; height: 150px; color: white">
                         <h2 style="color: white">Destinasia Travel Agency</h2>
                     </div>
-                    <div style="width: 100%; height: 220px; color: white">
+                    <div style="width: 1056px; height: 220px; color: white">
                             Get hands-on in this workshop installing the OpenShift Container Platform, deploying six
                             containerized services for Destinasia backend systems and testing the results.
                     </div>
-                    <div style="width: 100%; height: 100px;">
+                    <div style="width: 1056px; height: 100px;">
                         <ul style="color: white">
-                            <li><i><a href="lab00.html" target="_blank" style="color: red"><b>Destinasia workshop -
-                                OpenShift Container Platform, Containers, JBoss BRMS, xPaaS, PHP, .NET & JEE</b></a></i></li>
+                            <li><i><a href="introduction.html" target="_blank" style="color: red"><b>Get started with workshop
+                            introduction to your tasks.</b></a></i></li>
                         </ul>
                     </div>
                 </section>
+
                 <section data-background="images/rh-images/rh-bg-start.png" data-background-size="cover" data-background-position="bottom">
                     <div style="width: 1056px; height: 200px; color: white">
                         <h2 style="color: white;">THANK YOU</h2>
