--- a/introduction.html
+++ b/introduction.html
@@ -47,20 +47,40 @@
                 <h2 style="color: white;">Red Hat Cloud Suite</h2>
                 <h2 style="color: white;">Destinasia Introduction</h2>
             </div>
-            <div style="width: 1056px; height: 200px; color: white">
+            <div style="width: 1056px; height: 150px; color: white">
                 <h5 style="color: white;">Get started with AppDev in the Cloud</h5>
             </div>
-            <div style="width: 600px; height: 400px; text-align: left; color: white">
-                Eric D. Schabell<br/>
-                Global Technology Evangelist Director<br/>
-                <a href="http://twitter.com/ericschabell" style="color: red" target="_blank">@ericschabell</a><br/>
-                <a href="http://schabell.org" style="color: red">http://schabell.org</a>
+            <div style="width: 1056px; height: 100px;">
+                <ul style="color: white">
+                    <i>Destinasia workshop - OpenShift Container Platform, Containers, JBoss BRMS, xPaaS, PHP, .NET & JEE</i>
+                </ul>
             </div>
             <aside class="notes">
                 Welcome to the Destinasia workshop introduction. You will experience the power of appdev in the cloud
                 as developer for Destinasia Travel Agency, putting togehter backend services in containers and hosted
                 on your private PaaS in OpenShift Container Platform.
             </aside>
+        </section>
+
+        <section data-background="images/rh-images/rh-bg-light.png" data-background-size="cover" data-background-position="bottom">
+            <div style="width: 100%; height: 150px; color: white">
+                <h2 style="color: white;">GUIDELINES</h2>
+            </div>
+            <div style="width: 100%; height: 100px; text-align: left; color: white">
+                Some things to watch for in the workshop:<br/>
+            </div>
+            <div style="width: 100%; height: 500px; text-align: left; color: white">
+                <ul>
+                    <li>All links you can click to follow are <b style="color: midnightblue">MIDNIGHT BLUE</b></li>
+                    <li>All video can be clicked on to view</li>
+                    <li>All code will be: <i style="color: darkred">System.out.println("DARK RED");</i></li>
+                    <li>Memory will be reserved for 12 GB of RAM:</li>
+                    <ul>
+                        <li>Prevent problems by <b style="color: darkred">CLOSING ALL OTHER APPLICATIONS</b></li>
+                        <li><b style="color: darkred">DO NOT USE GOOGLE CHROME</b> for this lab... to much memory needed per tab open</li>
+                    </ul>
+                </ul>
+            </div>
         </section>
 
         <section data-background="images/rh-images/rh-bg-light.png" data-background-size="cover" data-background-position="bottom">
@@ -83,9 +103,6 @@
                         <li>xPaaS Integration service</li>
                     </ul>
                 </ul>
-            </div>
-            <div style="width: 1056px; height: 20px; text-align: left; color: white">
-                Available on <a href="http://github.com/redhatdemocentral/rhcs-destinasia-rules-demo" style="color: red" target="_blank"><b>Red Hat Demo Central</b></a> for you to take home!
             </div>
         </section>
 
@@ -112,23 +129,23 @@
             <div style="width: 100%; height: 60px; text-align: left; color: white">
                 The following requirements should be downloaded:<br/>
             </div>
-            <div style="width: 100%; height: 380px; text-align: left; color: white">
+            <div style="width: 100%; height: 500px; text-align: left; color: white">
                 <ul>
                     <li>Base needs:</li>
                     <ul>
-                        <li><a href="https://store.docker.com/search?offering=community&type=edition" style="color: red" target="_blank"><b>Docker v17.03</b></a></li>
-                        <li><a href="https://drive.google.com/open?id=0B9WSViV5BZ4aVXV5U3F4LVVmWVk" style="color: red" target="_blank"><b>OpenShift CLI v3.5.5.5</b></a></li>
-                        <li><a href="https://drive.google.com/open?id=0B9WSViV5BZ4aVXV5U3F4LVVmWVk" style="color: red" target="_blank"><b>VirtualBox (Mac / Windows)</b></a></li>
+                        <li><a href="https://store.docker.com/search?offering=community&type=edition" style="color: midnightblue" target="_blank"><b>Docker v17.03</b></a></li>
+                        <li><a href="https://drive.google.com/open?id=0B9WSViV5BZ4aVXV5U3F4LVVmWVk" style="color: midnightblue" target="_blank"><b>OpenShift CLI v3.5.5.5</b></a></li>
+                        <li><a href="https://drive.google.com/open?id=0B9WSViV5BZ4aVXV5U3F4LVVmWVk" style="color: midnightblue" target="_blank"><b>VirtualBox (Mac / Windows)</b></a></li>
                         <li>Ansible playbook tooling:</li>
                         <ul>
-                            <li><a href="http://docs.ansible.com/ansible/intro_installation.html#installing-the-control-machine" style="color: red" target="_blank"><b>Install instructions for Linux</b></a></li>
-                            <li><a href="http://docs.ansible.com/ansible/intro_installation.html#latest-releases-via-pip" style="color: red" target="_blank"><b>Install instructions for Mac</b></a></li>
+                            <li><a href="http://docs.ansible.com/ansible/intro_installation.html#installing-the-control-machine" style="color: midnightblue" target="_blank"><b>Install instructions for Linux</b></a></li>
+                            <li><a href="http://docs.ansible.com/ansible/intro_installation.html#latest-releases-via-pip" style="color: midnightblue" target="_blank"><b>Install instructions for Mac</b></a></li>
                         </ul>
                     </ul>
                     <li>AppDev in the Cloud:</li>
                     <ul>
-                        <li><a href="http://github.com/redhatdemocentral/ocp-install-demo" style="color: red" target="_blank"><b>OpenShift Container Platform Install Demo</b></a></li>
-                        <li><a href="http://github.com/redhatdemocentral/rhcs-destinasia-rules-demo" style="color: red" target="_blank"><b>Destinasia Travel Rules Demo</b></a></li>
+                        <li><a href="http://github.com/redhatdemocentral/ocp-install-demo" style="color: midnightblue" target="_blank"><b>OpenShift Container Platform Install Demo</b></a></li>
+                        <li><a href="http://github.com/redhatdemocentral/rhcs-destinasia-rules-demo" style="color: midnightblue" target="_blank"><b>Destinasia Travel Rules Demo</b></a></li>
                     </ul>
                 </ul>
             </div>
@@ -151,7 +168,7 @@
             </div>
             <div style="width: 100%; height: 380px; text-align: left; color: white">
                 <ol>
-                    <li>Download <a href="https://github.com/redhatdemocentral/ocp-install-demo/archive/master.zip" style="color: red" target="_blank"><b>ocp-install-demo</b></a> project and unzip</li>
+                    <li>Download <a href="https://github.com/redhatdemocentral/ocp-install-demo/archive/master.zip" style="color: midnightblue" target="_blank"><b>ocp-install-demo</b></a> project and unzip</li>
                     <li>Run init.sh or init.bat</li>
                     <li>Enjoy next few minutes before logging in</li>
                 </ol>
@@ -179,8 +196,9 @@
             </div>
             <div style="width: 100%; height: 380px; text-align: left; color: white">
                 <ul>
-                    <li>Download <a href="https://github.com/redhatdemocentral/rhcs-destinasia-rules-demo/archive/master.zip" style="color: red" target="_blank"><b>rhcs-destinasia-rules-demo</b></a> project and unzip</li>
-                    <li>Download <a href="https://developers.redhat.com/download-manager/file/jboss-eap-7.0.0-installer.jar" style="color: red" target="_blank"><b>JBoss EAP 7.0.0</b></a> and <a href="https://developers.redhat.com/download-manager/content/origin/files/sha256/14/148eb9be40833d5da00bb6108cbed1852924135d25ceb6c601c62ba43f99f372/jboss-brms-6.4.0.GA-deployable-eap7.x.zip" style="color: red" target="_blank"><b>JBoss BRMS 6.4.0</b></a></li>
+                    <li>Download <a href="https://github.com/redhatdemocentral/rhcs-destinasia-rules-demo/archive/master.zip" style="color: midnightblue" target="_blank"><b>rhcs-destinasia-rules-demo</b></a> project and unzip</li>
+                    <li>Download <a href="https://developers.redhat.com/download-manager/file/jboss-eap-7.0.0-installer.jar" style="color: midnightblue" target="_blank"><b>JBoss EAP 7.0.0</b></a>
+                        and <a href="https://developers.redhat.com/download-manager/content/origin/files/sha256/14/148eb9be40833d5da00bb6108cbed1852924135d25ceb6c601c62ba43f99f372/jboss-brms-6.4.0.GA-deployable-eap7.x.zip" style="color: midnightblue" target="_blank"><b>JBoss BRMS 6.4.0</b></a></li>
                     <ul>
                         <li>Add to <i>installs</i> directory</li>
                     </ul>
@@ -194,7 +212,7 @@
                     <br>
                     <ul>
                         <li><p style="font-size: 22px"><code style="color: darkred"><a href="http://destinasia-rules-demo.192.168.99.100.xip.io/business-central"
-                               style="color: darkred" target="_blank"><b>http://destinasia-rules-demo.192.168.99.100.xip.io/business-central</b></a> (password: jbossbrms1!)</code></p>
+                               style="color: darkred" target="_blank">http://destinasia-rules-demo.192.168.99.100.xip.io/business-central</a> (password: jbossbrms1!)</code></p>
                     </ul>
                 </ul>
             </div>
@@ -370,7 +388,7 @@
 
         <section data-background="images/rh-images/rh-bg-light.png" data-background-size="cover" data-background-position="bottom">
             <div style="width: 100%; height: 130px; color: white">
-                <h2 style="color: white;">WHAT'S NEXT...</h2>
+                <h2 style="color: white;">WORKSHOP PROJECTS</h2>
                 <h4 style="color: white">RED HAT DEMO CENTRAL COLLECTION</h4>
             </div>
             <div style="width: 100%; height: 580px; text-align: left; color: white">
@@ -379,25 +397,59 @@
         </section>
 
         <section data-background="images/rh-images/rh-bg-light.png" data-background-size="cover" data-background-position="bottom">
-            <div style="width: 1056px; height: 200px; color: white">
+            <div style="width: 1056px; height: 250px; color: white">
                 <img src="images/introduction/image14.png">
             </div>
-            <div style="width: 1056px; height: 400px; color: white">
-                <h2 style="color: white">A HANDS-ON WORKSHOP</h2>
-                <h5 style="color: white">Become the lead developeer for Destinasia Travel Agency discount rules project, <a href="lab00.html" style="color: red" target="_blank"><b>enter here.</b></a></h5>
+            <div style="width: 1056px; height: 500px; color: white">
+                <h2 style="color: white">NEXT UP...</h2>
+                <h5 style="color: white">You're about to become the lead developer for Destinasia Travel Agency discount rules project...
+                fame and fortune awaits if you can complete the workshop successfully...</h5>
             </div>
         </section>
 
-        <section data-background="images/rh-images/rh-bg-start.png" data-background-size="cover" data-background-position="bottom">
-            <div style="width: 1056px; height: 200px; color: white">
-                <h2 style="color: white;">THANK YOU</h2>
+        <section>
+            <div style="width: 1056px; height: 120px; color: white">
+                <h3>DESTINASIA SERVICES TEAM</h3>
             </div>
-            <div style="width: 600px; height: 100px; text-align: left; color: white">
-                Eric D. Schabell<br/>
-                Global Technology Evangelist Director<br/>
-                <a href="http://twitter.com/ericschabell" style="color: red" target="_blank">@ericschabell</a><br/>
-                <a href="http://schabell.org" style="color: red">http://schabell.org</a>
+            <div style="width: 1056px; height: 450px;">
+                <h5>
+                    Your tasked as the lead developer of the Destinasia travel discount project to set up
+                    a development environment in the Cloud for container-based application services deployed.
+                    <br><br>
+                    Once it's set up,you're validating the services using end-to-end testing. Tasks include installing OpenShift
+                    Container Platform (OCP), JBoss Enterprise Application Platform (EAP), JBoss Business Rules Management
+                    System (BRMS), several containerized web services and testing the solution using a REST client.
+                    <br><br>
+                    You'll need a laptop with minimum of 16GB of memory and internet access for downloading some of the
+                    requirements.
+                </h5>
             </div>
+            <div style="width: 1056px; height: 150px;">
+                <h5 style="color: grey"><b>Pre-requisites:</b> <i>Laptop with 16GB RAM, Docker 17.03, OpenShift Container
+                    Platform 3.5, JBoss EAP 7.0, JBoss BRMS 6.4</i></h5>
+            </div>
+        </section>
+
+        <section>
+            <div style="width: 1056px; height: 120px; color: white">
+                <h3>HOW EACH LAB WORKS</h3>
+            </div>
+            <div style="width: 1056px; height: 400px;" align="left">
+                <h5>
+                    A lab starts with a title page, a lab goal explaining what you're achieving and an overview
+                    architectural diagram highlighting in <i style="color: red;">RED</i> the component being worked
+                    on. The rest of the lab focuses on guiding through the steps to achieve the presented goal.
+                    <br><br>
+                    Each lab will finish up with the state you should be seeing, a page of contact information for
+                    eventual questions and a link to the next lab.
+                    <br><br>
+                    Now it's time to get to work...
+                </h5>
+            </div>
+        </section>
+        <section>
+            <h2>LET'S GET STARTED...</h2>
+            <h3><a href="lab01.html" style="color: midnightblue" target="_blank">Lab 1 - Install OpenShift Container Platform</a></h3>
         </section>
     </div>
 </div>
