--- a/lab02.html
+++ b/lab02.html
@@ -76,16 +76,16 @@
             </div>
             <div style="width: 1056px; height: 500px;">
                 <ul>
-                    <li>Download <a href="https://github.com/redhatdemocentral/rhcs-destinasia-rules-demo/archive/master.zip" style="color: red" target="_blank">rhcs-destinasia-rules-demo</a> and unzip</li>
+                    <li>Download <a href="https://github.com/redhatdemocentral/rhcs-destinasia-rules-demo/archive/master.zip" style="color: midnightblue" target="_blank">rhcs-destinasia-rules-demo</a> and unzip</li>
                     <ul>
                         <li><p style="font-size: 24px; color: darkred"><code>$ unzip rhcs-destinasia-rules-demo-master.zip</code></p></li>
                         <li><p style="font-size: 24px; color: darkred"><code>$ cd rhcs-destinasia-rules-demo-master</code></p></li>
                     </ul>
-                    <li>Download <a href ="https://developers.redhat.com/download-manager/file/jboss-eap-7.0.0-installer.jar" style="color: red" target="_blank">JBoss EAP</a>  and place in installs directory:</li>
+                    <li>Download <a href ="https://developers.redhat.com/download-manager/file/jboss-eap-7.0.0-installer.jar" style="color: midnightblue" target="_blank">JBoss EAP</a>  and place in installs directory:</li>
                     <ul>
                         <li><p style="font-size: 24px; color: darkred"><code>$ copy [path-to-download]/jboss-eap-7.0.0-installer.jar installs/jboss-eap-7.0.0-installer.jar</code></p></li>
                     </ul>
-                    <li>Download <a href ="https://developers.redhat.com/download-manager/content/origin/files/sha256/14/148eb9be40833d5da00bb6108cbed1852924135d25ceb6c601c62ba43f99f372/jboss-brms-6.4.0.GA-deployable-eap7.x.zip" style="color: red" target="_blank">JBoss BRMS</a> and place in installs directory:</li>
+                    <li>Download <a href ="https://developers.redhat.com/download-manager/content/origin/files/sha256/14/148eb9be40833d5da00bb6108cbed1852924135d25ceb6c601c62ba43f99f372/jboss-brms-6.4.0.GA-deployable-eap7.x.zip" style="color: midnightblue" target="_blank">JBoss BRMS</a> and place in installs directory:</li>
                     <ul>
                         <li><p style="font-size: 24px; color: darkred"><code>$ copy [path-to-download]/jboss-brms-6.4.0.GA-deployable-eap7.x.zip installs/jboss-brms-6.4.0.GA-deployable-eap7.x.zip</code></p></li>
                     </ul>
@@ -174,7 +174,6 @@
         <section>
             <div style="width: 1056px; height: 120px;">
                 <h2>VIEW OCP PROJECT</h2>
-                <h5>Click on Overview to view deployed containers / pods...</h5>
             </div>
             <div style="width: 1056px; height: 600px;">
                 <img src="images/destinasia-workshop/image22.png">
@@ -182,11 +181,12 @@
         </section>
 
         <section>
-            <div style="width: 1056px; height: 120px;">
+            <div style="width: 1056px; height: 170px;">
                 <h2>LOG IN TO JBOSS BRMS</h2>
+                <h5>Your IP address may differ, see console output</h5>
             </div>
             <div style="width: 1056px; height: 220px;" align="left">
-                <a href="http://destinasia-rules-demo.192.168.99.100.xip.io/business-central" style="color: darkred" target="_blank">http://destinasia-rules-demo.192.168.99.100.xip.io/business-central</a>
+                <a href="http://destinasia-rules-demo.192.168.99.100.xip.io/business-central" style="color: midnightblue" target="_blank">http://destinasia-rules-demo.192.168.99.100.xip.io/business-central</a>
                 <br><br>
                 <ul>
                     <li><p style="font-size: 24px">user: <code style="color: darkred">erics</code></p></li>
@@ -231,14 +231,14 @@
             <div style="width: 600px; height: 100px; text-align: left">
                 Eric D. Schabell<br/>
                 Global Technology Evangelist Director<br/>
-                <a href="http://twitter.com/ericschabell" style="color: red" target="_blank">@ericschabell</a><br/>
-                <a href="http://schabell.org" style="color: red">http://schabell.org</a>
+                <a href="http://twitter.com/ericschabell" style="color: midnightblue" target="_blank">@ericschabell</a><br/>
+                <a href="http://schabell.org" style="color: midnightblue">http://schabell.org</a>
             </div>
         </section>
 
         <section>
             <h2>UP NEXT...</h2>
-            <h3><a href="lab03.html" style="color: red" target="_blank">Lab 3 - Discount travel rules</a></h3>
+            <h3><a href="lab03.html" style="color: midnightblue" target="_blank">Lab 3 - Discount travel rules</a></h3>
         </section>
     </div>
 </div>
