--- a/lab05.html
+++ b/lab05.html
@@ -181,14 +181,14 @@
             <div style="width: 600px; height: 100px; text-align: left">
                 Eric D. Schabell<br/>
                 Global Technology Evangelist Director<br/>
-                <a href="http://twitter.com/ericschabell" style="color: red" target="_blank">@ericschabell</a><br/>
-                <a href="http://schabell.org" style="color: red">http://schabell.org</a>
+                <a href="http://twitter.com/ericschabell" style="color: midnightblue" target="_blank">@ericschabell</a><br/>
+                <a href="http://schabell.org" style="color: midnightblue">http://schabell.org</a>
             </div>
         </section>
 
         <section>
             <h2>UP NEXT...</h2>
-            <h3><a href="lab06.html" style="color: red" target="_blank">Lab 6 - Car service playbook</a></h3>
+            <h3><a href="lab06.html" style="color: midnightblue" target="_blank">Lab 6 - Car service playbook</a></h3>
         </section>
     </div>
 </div>
