--- a/lab09.html
+++ b/lab09.html
@@ -99,7 +99,7 @@
                     <br>
                     <ul>
                         <li><p style="font-size: 24px">
-                            <code><a href="http://fusetravelagency-appdev-in-cloud.192.168.99.100.xip.io/rest/book" style="color: darkred" target="_blank">
+                            <code><a href="http://fusetravelagency-appdev-in-cloud.192.168.99.100.xip.io/rest/book" style="color: midnightblue" target="_blank">
                             http://fusetravelagency-appdev-in-cloud.192.168.99.100.xip.io/rest/book</a></code></p></li>
                     </ul>
                     <br>
@@ -114,14 +114,14 @@
             </div>
             <div style="width: 1056px; height: 400px;">
                 <ul>
-                    <li>The payload to be put into your REST client:</li>
+                    <li>The payload to be put into your REST client (red text only):</li>
                     <br>
                     <ul>
-                        <li><p style="font-size: 24px"><code style="color: darkred">Method: POST</code></p></li>
-                        <li><p style="font-size: 24px"><code style="color: darkred">Header: Content-Type application/json</code></p></li>
-                        <li><p style="font-size: 24px"><code style="color: darkred">URL: http://fusetravelagency-appdev-in-cloud.192.168.99.100.xip.io/rest/book</code></p></li>
-                        <li><p style="font-size: 24px"><code style="color: darkred">Body:
-                            {"flightReq":{"flightFrom":"SIN","flightTo":"PEK","flightDate":"03/08/2017","flightPassengers":2,"flightNo":"SIN22"},"hotelReq":{"hotelArrivalDate":"03/08/2017","hotelNights":33,"hotelCity":"PEK","hotelId":"Marriott"},"carReq":{"carCity":"PEK","carRentalCo":"Hertz","carType":"Econ","carStartDate":"03/08/2017","carDays":33}}</code></p></li>
+                        <li><i style="font-size: 22px">Method: <code style="color: darkred">POST</code></i></li>
+                        <li><i style="font-size: 22px">Header: <code style="color: darkred">Content-Type application/json</code></i></li>
+                        <li><i style="font-size: 22px">URL: <code style="color: darkred">http://fusetravelagency-appdev-in-cloud.192.168.99.100.xip.io/rest/book</code></i></li>
+                        <li><i style="font-size: 20px">Body: <code style="color: darkred">
+                            {"flightReq":{"flightFrom":"SIN","flightTo":"PEK","flightDate":"03/08/2017","flightPassengers":2,"flightNo":"SIN22"},"hotelReq":{"hotelArrivalDate":"03/08/2017","hotelNights":33,"hotelCity":"PEK","hotelId":"Marriott"},"carReq":{"carCity":"PEK","carRentalCo":"Hertz","carType":"Econ","carStartDate":"03/08/2017","carDays":33}}</code></i></li>
                     </ul>
                 </ul>
             </div>
@@ -135,8 +135,8 @@
                 Install or use your own REST Client, starting by selecting the <i>Method</i> and <i>URL</i>:
                 <br><br>
                 <ul>
-                    <li><p style="font-size: 24px"><code style="color: darkred">Method: POST</code></p></li>
-                    <li><p style="font-size: 24px"><code style="color: darkred">URL: http://fusetravelagency-appdev-in-cloud.192.168.99.100.xip.io/rest/book</code></p></li>
+                    <li><i style="font-size: 22px">Method: <code style="color: darkred">POST</code></i></li>
+                    <li><i style="font-size: 22px">URL: <code style="color: darkred">http://fusetravelagency-appdev-in-cloud.192.168.99.100.xip.io/rest/book</code></i></li>
                 </ul>
                 <img src="images/destinasia-workshop/image78.png">
             </div>
@@ -150,7 +150,7 @@
                 Insert this <i>Header</i>:
                 <br><br>
                 <ul>
-                    <li><p style="font-size: 24px"><code style="color: darkred">Header: Content-Type application/json</code></p></li>
+                    <li><i style="font-size: 22px">Header: <code style="color: darkred">Content-Type application/json</code></i></li>
                 </ul>
                 <br>
                 <img height="30%" width="30%" src="images/destinasia-workshop/image79.png">
@@ -166,7 +166,7 @@
                 Insert this <i>Body</i>, ensure there are no line feed (returns):
                 <br><br>
                 <ul>
-                    <li><p style="font-size: 24px"><code style="color: darkred">Body:{"flightReq":{"flightFrom":"SIN","flightTo":"PEK","flightDate":"03/08/2017","flightPassengers":2,"flightNo":"SIN22"},"hotelReq":{"hotelArrivalDate":"03/08/2017","hotelNights":33,"hotelCity":"PEK","hotelId":"Marriott"},"carReq":{"carCity":"PEK","carRentalCo":"Hertz","carType":"Econ","carStartDate":"03/08/2017","carDays":33}}</code></p></li>
+                    <li><i style="font-size: 20px">Body: <code style="color: darkred">{"flightReq":{"flightFrom":"SIN","flightTo":"PEK","flightDate":"03/08/2017","flightPassengers":2,"flightNo":"SIN22"},"hotelReq":{"hotelArrivalDate":"03/08/2017","hotelNights":33,"hotelCity":"PEK","hotelId":"Marriott"},"carReq":{"carCity":"PEK","carRentalCo":"Hertz","carType":"Econ","carStartDate":"03/08/2017","carDays":33}}</code></i></li>
                 </ul>
                 <br>
                 <img src="images/destinasia-workshop/image81.png">
@@ -244,15 +244,15 @@
             <div style="width: 600px; height: 100px; text-align: left">
                 Eric D. Schabell<br/>
                 Global Technology Evangelist Director<br/>
-                <a href="http://twitter.com/ericschabell" style="color: red" target="_blank">@ericschabell</a><br/>
-                <a href="http://schabell.org" style="color: red">http://schabell.org</a>
+                <a href="http://twitter.com/ericschabell" style="color: midnightblue" target="_blank">@ericschabell</a><br/>
+                <a href="http://schabell.org" style="color: midnightblue">http://schabell.org</a>
             </div>
         </section>
 
         <section>
             <h2>BACK TO WORKSHOPS</h2>
             <br>
-            <h3><a href="index.html" style="color: red" target="_blank">Head back to workshops...</a></h3>
+            <h3><a href="index.html" style="color: midnightblue" target="_blank">Head back to workshops...</a></h3>
         </section>
     </div>
 </div>
