Added page counter.

--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@
                         <a href="http://twitter.com/ericschabell" style="color: red" target="_blank">@ericschabell</a><br/>
                         <a href="http://schabell.org" style="color: red">http://schabell.org</a>
                     </div>
+										<div align="center">
+											<a href="http://www.simplehitcounter.com" target="_blank">
+												<img src="http://simplehitcounter.com/hit.php?uid=2279893&f=16777215&b=0" border="0" height="18" width="83" alt="web counter">
+											</a>
+										</div>
                     <aside class="notes">Welcome to the workshop!</aside>
                 </section>
 
