--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <a href="http://schabell.org" style="color: red">http://schabell.org</a>
                     </div>
 										<div style="color: white" align="center">
-											Page views: <a href="http://www.simplehitcounter.com" target="_blank">
+											<a href="http://www.simplehitcounter.com" target="_blank">
 												<img src="http://simplehitcounter.com/hit.php?uid=2279893&f=16777215&b=0" border="0" height="18" width="83" alt="web counter"></a>
 										</div>
                     <aside class="notes">Welcome to the workshop!</aside>
